Fix wrapping issue with headings

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -78,6 +78,11 @@ h2 {
   font-size: 2em;
 }
 
+h2 span {
+  display: inline-block;
+  white-space: pre;
+}
+
 h3 {
   font-size: 1.5em;
 }
@@ -113,13 +118,19 @@ section {
 
 .container:not(.wide) {
   max-width: var(--width-centering-wrapper);
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: var(--main-margin);
 }
-.container > h2 {
+.container > h2,
+h2.rebel-h2 {
   text-align: center;
+}
+h2.rebel-h2 {
+  margin: var(--section-gap);
+  padding: 0 var(--main-margin);
 }
 
 #oscar {
@@ -219,7 +230,6 @@ section {
 }
 
 #projects .container {
-  height: min-content;
   width: 100%;
   margin: 0;
 
@@ -231,7 +241,7 @@ section {
   overflow-y: hidden;
   background-color: var(--blank-bg-color);
 
-  border: solid 0.1rem var(--accent-color);
+  border: solid 1px var(--accent-color);
   border-right: 0;
   border-left: 0;
 }
@@ -394,6 +404,10 @@ button:active {
   background-color: var(--base-bg-color);
 }
 
+/********************
+ *  Narrow Screens  *
+ ********************/
+
 @media only screen and (max-width: 900px) {
   :root {
     --main-margin: 3rem;
@@ -415,6 +429,10 @@ button:active {
   .container:not(.wide) {
     max-width: none;
     gap: var(--material-padding);
+  }
+  h2.rebel-h2 {
+    margin: var(--material-padding) var(--main-margin);
+    padding: 0 var(--section-gap);
   }
   #oscar .container {
     margin: 0;
@@ -449,7 +467,7 @@ button:active {
     scroll-snap-type: x mandatory;
   }
   .project-card {
-    flex-basis: 90%;
+    flex-basis: 85%;
     font-size: larger;
     scroll-snap-align: center;
   }
